Version 1.3.29:
* Link with -headerpad_max_install_names on OS X [Tobias Netzel].

Version 1.3.28:
* New official boolean option uaegfx_card to enable the "Picasso 96 card".
* Re-initialize shaders after fullscreen<->window switching.
* (Launcher) Double-click (or enter) in configuration list starts FS-UAE.
* (Launcher) Remember last directories used when browsing for floppies,
  CDs, hard drives and kickstarts.
* (Launcher) Automatically add floppies in drives to swap list if swap
  list is empty.
* (Launcher) Find hard drive zip file relative to hard drives dir.
* (Launcher) GUI widgets to override memory settings.
* (Launcher) Added checkboxes for uaegfx.card and bsdsocket.library.
* (Launcher) Added checkbox to enable NTSC mode.
* (Launcher) Updated GUI main window background drawing to make the GUI
  look better on Linux (looks much nicer on Kubuntu now).
* (Launcher) Center FS-UAE window on launcher window.
* (Launcher) Center launch dialog on main window also on OS X.
* (Launcher) Updated look for OS X.

Version 1.3.27:
* Config for Retro Joystick interface v1.2 (joystick adapter) [Magnar].
* Fixed serial port emulation when not serial port is not "used".
* Native serial port for POSIX systems [lallafa].
* Added A1000 model support (defaulting to Kickstart 1.2).
* Fixed a bug preventing the launcher from starting on some systems.
* (Launcher) Added A1000 model support.
* (Launcher) Work around bug in openSUSE 12.2's gettext.py.

Version 1.3.26:
* Fixed window manager icon lookup on Linux [grimi].
* (Launcher) Associate .fs-uae files with FS-UAE (windows installer).
* (Launcher) Expand ~/ and $HOME/ in paths from config files.
* (Launcher) Fixed joystick matching when joystick name contains multiple
  adjacent spaces.
* (Launcher) Set window icon for Linux also, in case the desktop
  environment does not pick up the .desktop file icon.

Version 1.3.25:
* Properly close OpenAL device on shutdown (avoids error on shutdown on